{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Gameplay",
            "id": "ae3564fe-b4c9-4b09-8808-91963c7d3443",
            "actions": [
                {
                    "name": "Lane1",
                    "type": "Button",
                    "id": "3725f186-99a0-405d-bfb9-cb78dafd9eef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Lane2",
                    "type": "Button",
                    "id": "a561bf8f-f6e4-4504-a1bd-91f46a30c0c9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Lane3",
                    "type": "Button",
                    "id": "623106e7-3308-434b-84b0-6ec7993084df",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Lane4",
                    "type": "Button",
                    "id": "6a2e504a-2db6-4994-9d72-c719c0be7c22",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fb1ba186-7928-4ab6-a118-39e46119e90e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lane1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4f996832-0487-4771-bf67-c19efc2088e2",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lane2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f97d71e8-ac4a-4fc0-8770-7a2f30b4dbce",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lane3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c7c01dac-9ee2-40b6-a17c-ea98a36078eb",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Lane4",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}